
if (LIBCFUNK_MODULE_BSTREE)
  add_executable(test-bstree)
  target_link_libraries(test-bstree PRIVATE cfunk)
  target_sources(test-bstree PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-bstree.c)
endif ()

if (LIBCFUNK_MODULE_BSWAP)
  add_executable(test-bswap)
  target_link_libraries(test-bswap PRIVATE cfunk)
  target_sources(test-bswap PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-bswap.c)
endif ()

if (LIBCFUNK_MODULE_CIRCULAR_SHIFT)
  add_executable(test-circular-shift)
  target_link_libraries(test-circular-shift PRIVATE cfunk)
  target_sources(test-circular-shift PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-circular-shift.c)
endif ()

if (LIBCFUNK_MODULE_COPY_FILE)
  add_executable(test-copy-file)
  target_link_libraries(test-copy-file PRIVATE cfunk)
  target_sources(test-copy-file PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-copy-file.c)
endif ()

if (LIBCFUNK_MODULE_CPU_COUNT)
  add_executable(test-cpu-count)
  target_link_libraries(test-cpu-count PRIVATE cfunk)
  target_sources(test-cpu-count PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-cpu-count.c)
endif ()

if (LIBCFUNK_MODULE_ERR)
  add_executable(test-err)
  target_link_libraries(test-err PRIVATE cfunk)
  target_sources(test-err PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-err.c)
endif ()

if (LIBCFUNK_MODULE_ERROR)
  add_executable(test-error)
  target_link_libraries(test-error PRIVATE cfunk)
  target_sources(test-error PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-error.c)
endif ()

if (LIBCFUNK_MODULE_FFS)
  add_executable(test-ffs)
  target_link_libraries(test-ffs PRIVATE cfunk)
  target_sources(test-ffs PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-ffs.c)
endif ()

if (LIBCFUNK_MODULE_FLS)
  add_executable(test-fls)
  target_link_libraries(test-fls PRIVATE cfunk)
  target_sources(test-fls PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-fls.c)
endif ()

if (LIBCFUNK_MODULE_GETENTROPY)
  add_executable(test-getentropy)
  target_link_libraries(test-getentropy PRIVATE cfunk)
  target_sources(test-getentropy PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-getentropy.c)
endif ()

if (LIBCFUNK_MODULE_GETRANDOM)
  add_executable(test-getrandom)
  target_link_libraries(test-getrandom PRIVATE cfunk)
  target_sources(test-getrandom PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-getrandom.c)
endif ()

if (LIBCFUNK_MODULE_INT_OVERFLOW)
  add_executable(test-int-overflow)
  target_link_libraries(test-int-overflow PRIVATE cfunk)
  target_sources(test-int-overflow PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-int-overflow.c)
endif ()

if (LIBCFUNK_MODULE_LIST)
  add_executable(test-list)
  target_link_libraries(test-list PRIVATE cfunk)
  target_sources(test-list PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-list.c)
endif ()

if (LIBCFUNK_MODULE_PHYSICAL_MEMORY)
  add_executable(test-physical-memory)
  target_link_libraries(test-physical-memory PRIVATE cfunk)
  target_sources(test-physical-memory PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-physical-memory.c)
endif ()

if (LIBCFUNK_MODULE_POPCOUNT)
  add_executable(test-popcount)
  target_link_libraries(test-popcount PRIVATE cfunk)
  target_sources(test-popcount PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-popcount.c)
endif ()

if (LIBCFUNK_MODULE_PROGRAM_NAME)
  add_executable(test-program-name)
  target_link_libraries(test-program-name PRIVATE cfunk)
  target_sources(test-program-name PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-program-name.c)
endif ()

if (LIBCFUNK_MODULE_RBTREE)
  add_executable(test-rbtree)
  target_link_libraries(test-rbtree PRIVATE cfunk)
  target_sources(test-rbtree PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-rbtree.c)
endif ()

if (LIBCFUNK_MODULE_SLIST)
  add_executable(test-slist)
  target_link_libraries(test-slist PRIVATE cfunk)
  target_sources(test-slist PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-slist.c)
endif ()

if (LIBCFUNK_MODULE_SPLAY_TREE)
  add_executable(test-splay-tree)
  target_link_libraries(test-splay-tree PRIVATE cfunk)
  target_sources(test-splay-tree PRIVATE ${CMAKE_CURRENT_LIST_DIR}/test-splay-tree.c)
endif ()

